fix(ZNTA-61): collapse tm detail panel title when it is too long
Shows a tooltip on mouseover to show the full content.

--- a/server/zanata-frontend/src/editor/app/containers/SuggestionDetailsModal/index.css
+++ b/server/zanata-frontend/src/editor/app/containers/SuggestionDetailsModal/index.css
@@ -1,4 +1,12 @@
 
+/* Shorten with an ellipsis when overflowing */
+.ellipsis {
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+}
+
+
 /* Based on bootstrap styles. */
 
 :root {
